# rust-bus-gen

./: Cargo.toml  LICENSE  build.rs
data/secretservice/: collection.xml
src/: test.rs  types.rs  types.rs.in  write.rs
