[package]
name = "rust-bus-gen"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
license = "BSD-3-Clause"
description = """
Library for exposing a D-Bus interface.
"""
repository = "https://github.com/mathstuf/rust-bus-gen.git"
homepage = "https://github.com/mathstuf/rust-bus-gen"
build = "build.rs"

[build-dependencies]
serde_codegen = "*"

[dependencies]
serde = "~0.7"
